--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="android.view.View"/>
@@ -53,6 +54,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <include
+            layout="@layout/content_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            bind:myUser="@{user}"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="@+id/edittext"
+            app:layout_constraintStart_toStartOf="@+id/edittext"
+            app:layout_constraintTop_toBottomOf="@+id/edittext" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
